Blender 3.0 is crashing when creating hair particle system (Windows, Intel) #93680

Closed
opened 2021-12-05 04:14:56 +01:00 by Sujaya · 48 comments

System Information
Operating system: Windows 10 Pro 21H1
Graphics card: Intel(R) HD Graphics 4400

Blender Version
Broken: 3.0.0 | Date: 2021-12-02 18:35 | Hash: f1cca30557 | Branch: master
Worked: 2.93

Short description of error
2021-12-05 08-26-58.mp4
blender.crash.txt

Exact steps for others to reproduce the error

**System Information** Operating system: Windows 10 Pro 21H1 Graphics card: Intel(R) HD Graphics 4400 **Blender Version** Broken: 3.0.0 | Date: 2021-12-02 18:35 | Hash: f1cca3055776 | Branch: master Worked: 2.93 **Short description of error** [2021-12-05 08-26-58.mp4](https://archive.blender.org/developer/F12690516/2021-12-05_08-26-58.mp4) [blender.crash.txt](https://archive.blender.org/developer/F12698126/blender.crash.txt) **Exact steps for others to reproduce the error**
Author

Added subscriber: @Sujaya-Manith

Added subscriber: @Sujaya-Manith

#95081 was marked as duplicate of this issue

#95081 was marked as duplicate of this issue

#94539 was marked as duplicate of this issue

#94539 was marked as duplicate of this issue

#94269 was marked as duplicate of this issue

#94269 was marked as duplicate of this issue

#93970 was marked as duplicate of this issue

#93970 was marked as duplicate of this issue

#93716 was marked as duplicate of this issue

#93716 was marked as duplicate of this issue

#93670 was marked as duplicate of this issue

#93670 was marked as duplicate of this issue

Added subscriber: @InquisitorNaega

Added subscriber: @InquisitorNaega

My exact same issue, I thought I was the only one who encountered this bug, the issue wasn't present in blender 2.93.6 for me, but now like shown in the video changing the particle system type to hair completely crashes blender and exits it (fortunately it doesn't freeze it).
blender_debug_output.txt

blender_system_info.txt

My exact same issue, I thought I was the only one who encountered this bug, the issue wasn't present in blender 2.93.6 for me, but now like shown in the video changing the particle system type to hair completely crashes blender and exits it (fortunately it doesn't freeze it). [blender_debug_output.txt](https://archive.blender.org/developer/F12691719/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F12691720/blender_system_info.txt)
Member

Added subscribers: @Brelidav, @lichtwerk

Added subscribers: @Brelidav, @lichtwerk

The issue doesn't seem to happen on Linux (I used Manjaro Linux) so it seems to be a Windows problem then
Screenshot from 2021-12-06 15-48-26.png
Edit: it actually doesn't work on linux as well, I was using blender 2.93 instead of 3.0 to test

The issue doesn't seem to happen on Linux (I used Manjaro Linux) so it seems to be a Windows problem then ![Screenshot from 2021-12-06 15-48-26.png](https://archive.blender.org/developer/F12698041/Screenshot_from_2021-12-06_15-48-26.png) Edit: it actually doesn't work on linux as well, I was using blender 2.93 instead of 3.0 to test
Member

Added subscribers: @hamzakouinine, @PratikPB2123

Added subscribers: @hamzakouinine, @PratikPB2123
Philipp Oeser changed title from Blender 3.0 is crashing when creating hair particle system to Blender 3.0 is crashing when creating hair particle system (Windows, Intel) 2021-12-06 16:06:05 +01:00
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Contributor

Can not reproduce
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.06
system-info.txt

Can not reproduce Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.06 [system-info.txt](https://archive.blender.org/developer/F12699917/system-info.txt)
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

@Raimund58 I believe the issue only occurs on Windows when using Intel integrated graphics.

@Raimund58 I believe the issue only occurs on Windows when using Intel integrated graphics.
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Could the affected users please note which driver versions they are using? (or try upgrading them?)
https://docs.blender.org/manual/en/dev/troubleshooting/gpu/index.html
https://docs.blender.org/manual/en/dev/troubleshooting/gpu/windows/intel.html

Could the affected users please note which driver versions they are using? (or try upgrading them?) https://docs.blender.org/manual/en/dev/troubleshooting/gpu/index.html https://docs.blender.org/manual/en/dev/troubleshooting/gpu/windows/intel.html
Contributor

Added subscriber: @Jake-Faulkner

Added subscriber: @Jake-Faulkner
Member

Added subscriber: @TarekKamel

Added subscriber: @TarekKamel
Member

Poke, please try upgrading GPU drivers and see if that helps

Poke, please try upgrading GPU drivers and see if that helps
Member

Added subscriber: @Meniac404

Added subscriber: @Meniac404

Added subscriber: @Kooale325-2

Added subscriber: @Kooale325-2

In #93680#1275687, @lichtwerk wrote:
Poke, please try upgrading GPU drivers and see if that helps

Have tried updating to latest gpu drivers (Intel hd 4600). It doesnt fix the crash unfortunately

> In #93680#1275687, @lichtwerk wrote: > Poke, please try upgrading GPU drivers and see if that helps Have tried updating to latest gpu drivers (Intel hd 4600). It doesnt fix the crash unfortunately
Author

Me too (Intel HD 4400)

Me too (Intel HD 4400)

me too it just doesnt work

me too it just doesnt work
Member

Added subscriber: @Gabo7590

Added subscriber: @Gabo7590
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Contributor

In #93680#1276422, @Kooale325-2 wrote:

Have tried updating to latest gpu drivers (Intel hd 4600). It doesnt fix the crash unfortunately

Could you specify the version number of the driver you have installed?

> In #93680#1276422, @Kooale325-2 wrote: > > Have tried updating to latest gpu drivers (Intel hd 4600). It doesnt fix the crash unfortunately Could you specify the version number of the driver you have installed?

Added subscriber: @relo07

Added subscriber: @relo07

Hi! I have the same problem with the same hardware. My driver version is 20.19.15.5171.

I was thinking that my hardware was too old for 3D modeling (I'm a beginner on this) so find this thread gives me a little hope.

Edit 1: I tried to upgrade my drivers but it was already upgraded.
Edit 2: The user that was saying that the problem seems to be just in windows, later said that he wasn't using the latest version and when he ugraded it to 3.0, has the same problem in linux, in case you didn't noticed.

Hi! I have the same problem with the same hardware. My driver version is 20.19.15.5171. I was thinking that my hardware was too old for 3D modeling (I'm a beginner on this) so find this thread gives me a little hope. Edit 1: I tried to upgrade my drivers but it was already upgraded. Edit 2: The user that was saying that the problem seems to be just in windows, later said that he wasn't using the latest version and when he ugraded it to 3.0, has the same problem in linux, in case you didn't noticed.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Jake was assigned by Pratik Borhade 2022-01-12 12:30:08 +01:00
Member

@Jake-Faulkner submitted the fix (D13806) so I think we can confirm this report.

Also, problem is more related to #eevee_viewport module and not #platform:_windows so replacing the tag

@Jake-Faulkner submitted the fix ([D13806](https://archive.blender.org/developer/D13806)) so I think we can confirm this report. Also, problem is more related to #eevee_viewport module and not #platform:_windows so replacing the tag

In #93680#1286909, @PratikPB2123 wrote:
@Jake-Faulkner submitted the fix (D13806) so I think we can confirm this report.

Also, problem is more related to #eevee_viewport module and not #platform:_windows so replacing the tag

When do you think the fix will get implemented in a downloadable blender version?

> In #93680#1286909, @PratikPB2123 wrote: > @Jake-Faulkner submitted the fix ([D13806](https://archive.blender.org/developer/D13806)) so I think we can confirm this report. > > Also, problem is more related to #eevee_viewport module and not #platform:_windows so replacing the tag When do you think the fix will get implemented in a downloadable blender version?

try to download the daily builds

try to download the daily builds

In #93680#1288520, @Meniac404 wrote:
try to download the daily builds

i downloaded the latest daily build available from the blender website but it doesnt seem to have the fix implemented?

> In #93680#1288520, @Meniac404 wrote: > try to download the daily builds i downloaded the latest daily build available from the blender website but it doesnt seem to have the fix implemented?

me too, it doesn't work, maybe they will put it in the official release of 3.1.0, I hope it will be sooner

me too, it doesn't work, maybe they will put it in the official release of 3.1.0, I hope it will be sooner
Member

Hi, patch is yet to land in master. that's why its still broken for you

You will have to wait until the fix get committed: D13806#366018

Hi, patch is yet to land in master. that's why its still broken for you You will have to wait until the fix get committed: [D13806](https://archive.blender.org/developer/D13806)#366018

Added subscriber: @ShaneAshby

Added subscriber: @ShaneAshby

Having the same issue with a Surface Book 2, which has Intel UDH Graphics 620 and NVidia GeForce GTX 1060. Should this patch resolve that issue, or just limited to the Intel HD 4400 and 4600? Thanks!

Having the same issue with a Surface Book 2, which has Intel UDH Graphics 620 and NVidia GeForce GTX 1060. Should this patch resolve that issue, or just limited to the Intel HD 4400 and 4600? Thanks!
Member

Added subscriber: @Verveda-Nataliya

Added subscriber: @Verveda-Nataliya
Contributor

@ShaneAshby the patch does not currently target the UHD 620, could you post the crash log and the driver version of the Intel Display Adapter so I can verify it is the same issue? A solution that may work for you in the meantime is to switch the preferred GPU (either for just blender or globally) to the Nvidia card in the Nvidia Control Panel.

@ShaneAshby the patch does not currently target the UHD 620, could you post the crash log and the driver version of the Intel Display Adapter so I can verify it is the same issue? A solution that may work for you in the meantime is to switch the preferred GPU (either for just blender or globally) to the Nvidia card in the Nvidia Control Panel.

This issue was referenced by 263f862ba5

This issue was referenced by 263f862ba567a8209ced7d6d6486a1f275578aa4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @yalayama

Added subscriber: @yalayama

Blender 3.0.1 Same problem with hair making blender crash encountered on MacBook Pro running Big Sur (OS 11.5.2)

Processor: 2.8 GHz Quad-Core Intel Core i7 V
Graphics: AMD Radeon R9 M370X 2 GB

Just downloaded 2.93 and the problem is there too - however Ver 2.83 works fine.

Blender 3.0.1 Same problem with hair making blender crash encountered on MacBook Pro running Big Sur (OS 11.5.2) Processor: 2.8 GHz Quad-Core Intel Core i7 V Graphics: AMD Radeon R9 M370X 2 GB Just downloaded 2.93 and the problem is there too - however Ver 2.83 works fine.

Closed as duplicate of #100776

Closed as duplicate of #100776

This is still happening with Blender 3.6 ie instant crash when adding hair particles. My pc is pretty beefy, lots of RAM, pretty
decent video card. Nver had problem with 2.93

This is still happening with Blender 3.6 ie instant crash when adding hair particles. My pc is pretty beefy, lots of RAM, pretty decent video card. Nver had problem with 2.93
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
16 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93680
No description provided.